--- a/charities/templates/charities/charities.html
+++ b/charities/templates/charities/charities.html
@@ -71,12 +71,17 @@
                         <form action="{% url 'add_to_favs' charity.id %}" method="POST" class="charity-card-btn-box">
                             {% csrf_token %}
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                            <a href="{% url 'charity_detail' charity.id %}" aria-label="link to charity page"
+                            <a href="{% url 'charity_detail' charity.id %}" aria-label="link to {{ charity.charity_name }} page"
                                 class="btn btn-lg btn-pink-outline charity-card-btn">Info</a>
                             {% if charity.id not in charity_favs_ids %}
-                                <button type="submit" class="btn btn-lg btn-pink-outline charity-card-btn">Favourite</button>
+                                <button type="submit" class="btn btn-lg btn-pink-outline charity-card-btn">
+                                    Favourite
+                                </button>
                             {% else %}
-                                <a href="{% url 'delete_from_favs_on_charities_page' charity.id %}" class="btn btn-lg charity-card-btn unfavourite">Unfavourite</a>
+                                <a href="{% url 'delete_from_favs_on_charities_page' charity.id %}"
+                                    class="btn btn-lg btn-pink-unfav charity-card-btn unfavourite" aria-label="Unfavourite {{ charity.charity_name}}">
+                                        Unfavourite
+                                </a>
                             {% endif %}
                         </form>
                     </div>
