--- a/checkout/templates/checkout/billing_success.html
+++ b/checkout/templates/checkout/billing_success.html
@@ -10,7 +10,7 @@
 {% block content %}
 <div class="container-fluid bg-light-brand pb-5">
     <div class="container">
-        <div class="card bg-light-brand p-3 p-lg-4 shadow my-1 my-lg-5">
+        <div class="card bg-light-brand p-3 p-lg-4 shadow mt-5 my-lg-5">
             <div class="row">
                 <div class="col-12 col-lg-10 mx-auto">
                     <h1 class="text-pink bold profile-title text-center text-capitalize mt-3 mt-lg-5">
@@ -24,17 +24,18 @@
                         <p class="text-dark"><strong>Donation Number:</strong> {{ donation.donation_number }}</p>
                         <p class="text-dark"><strong>Donation Date:</strong> {{ donation.date }}</p>
                         {% for key, value in donation.donation_breakdown.items %}
+                            {% if value > 0 %}
                             <ul class="pl-2 mb-1">
                                 <li class="no-bullets">
                                     <strong>£{{ value }}</strong> to {{ key }}
                                 </li>
                             </ul>
+                            {% endif %}
                         {% endfor %}
-                        <p class="text-dark"><strong>Donation total: £{{ donation.total }}</strong></p>
+                        <p class="text-dark mt-2"><strong>Donation total: £{{ donation.total }}</strong></p>
                     </div>
-
                     <p class="text-dark profile-sub-title text-left mb-5">   
-                        Thankyou. Your contributions, no matter how small, have a huge positive impact.
+                        Thank you. Your contributions, no matter how small, have a huge positive impact.
                     </p>
                 </div>
             </div>
