--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -28,7 +28,7 @@
         </div>
     </div>
     <!-- Displays on screens with width < 992px -->
-    <div id="hero-text-sm" class="row bg-light-brand text-center col-12 d-block d-lg-none p-0 m-0 mx-auto">
+    <div id="hero-text-sm" class="row bg-light-brand text-center col-12 d-block d-lg-none mx-auto">
         <h2 class="col-12 bold text-pink mx-auto">Spreading affordable support, to your causes, your way.</h2>
         {% if request.user.is_authenticated %}
         {% else %}
