--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,7 +9,6 @@ html {
 body {
     padding: 0;
     margin-top: 4.5rem;
-    height: calc(100vh - 60px);
     color: #222;
     background-color: #EDCBBD;
     font-family: 'League Spartan', Arial, Helvetica, sans-serif;
@@ -332,8 +331,8 @@ i.icon-lg {
     padding-left: 4.7rem;
 }
 
-@media screen and (min-width: 320px) and (max-width: 575px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
     body {
-        margin-top: 90px;
+        margin-top: 4rem;
     }
 }
