--- a/charities/templates/charities/charity_detail.html
+++ b/charities/templates/charities/charity_detail.html
@@ -48,7 +48,7 @@
         <div class="card impact-card mb-3">
             <div class="row no-gutters">
                 <div class="col-md-4 impact-card-logo-box">
-                    <img src="{% static '/media/' %}{{ charity.logo_image }}" alt="{{ charity.charity_name }} logo"
+                    <img src="{% static 'media/' %}{{ charity.logo_image }}" alt="{{ charity.charity_name }} logo"
                         class="bg-white impact-card-img">
                 </div>
                 <div class="col-md-8">
