--- a/checkout/templates/checkout/billing_success.html
+++ b/checkout/templates/checkout/billing_success.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
 {% endblock %}
 
-{% block extra_title %}My Profile{% endblock %}
+{% block extra_title %}Donation Success{% endblock %}
 
 {% block content %}
 <div class="container-fluid bg-light-brand pb-5">
