chore: replace overlay div at top of template

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -8,6 +8,7 @@
 {% block extra_title %}Donate{% endblock %}
 
 {% block content %}
+<div class="overlay"></div>
 <div class="container-fluid bg-light-brand pt-3 pb-5">
     <div class="container">
         <div class="card bg-light-brand  shadow my-1 my-lg-5">
