--- a/templates/allauth/account/email.html
+++ b/templates/allauth/account/email.html
@@ -6,7 +6,7 @@
 
 {% block inner_content %}
 
-  <div class="container-fluid bg-light-brand account-box p-3 p-md-5 my-3 my-md-5 mx-auto">
+  <div class="container-fluid bg-light-brand account-box p-3 p-lg-4 my-3 my-md-5 mx-auto">
     <div class="row">
       <div class="col-12">
         <h1 class="text-pink bold">{% trans "Email Addresses" %}</h1>
@@ -14,7 +14,7 @@
         <p>{% trans 'The following email addresses are associated with your account:' %}</p>
       </div>
     </div>
-    <form action="{% url 'account_email' %}" class="email_list" method="post">
+    <form action="{% url 'account_email' %}" class="email_list col-12" method="post">
       {% csrf_token %}
       {{ form|crispy }}
       <fieldset class="blockLabels">
