--- a/templates/allauth/account/email_change.html
+++ b/templates/allauth/account/email_change.html
@@ -4,7 +4,7 @@
     {% trans "Email Address" %}
 {% endblock %}
 {% block inner_content %}
-    <div class="container-fluid bg-light-brand account-box p-3 p-md-5 my-3 my-md-5 mx-auto">
+    <div class="container-fluid bg-light-brand account-box p-3 p-lg-4 my-3 my-md-5 mx-auto">
         <div class="row">
             <div class="col-12">
                 <h1 class="text-pink bold">{% trans "Email Address" %}</h1>
@@ -18,7 +18,7 @@
                         <p>
                             {% trans 'Your email address is still pending verification:' %} <a href="mailto:{{ new_emailaddress.email }}" class="a-pink">{{ new_emailaddress.email }}</a>
                         </p>
-                        <form method="post" action="{% url 'account_email' %}">
+                        <form method="post" action="{% url 'account_email' %}" class="col-12">
                             {% csrf_token %}
                             {{ form|crispy }}
                             <input type="hidden" name="email" value="{{ new_emailaddress.email }}">
