--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -8,7 +8,7 @@
 
 {% block inner_content %}
 
-<div class="container-fluid bg-light-brand account-box p-3 p-md-5 my-3 my-md-5 mx-auto">
+<div class="container-fluid bg-light-brand account-box p-3 p-lg-4 my-3 my-md-5 mx-auto">
     <div class="row">
         <div class="col-12">
             <h1 class="text-pink bold">{% trans "Confirm Email Address" %}</h1>
@@ -22,7 +22,7 @@
 
         </div>
     </div>
-    <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
+    <form method="post" action="{% url 'account_confirm_email' confirmation.key %}" class="col-12">
         {% csrf_token %}
             <button class="primaryAction btn btn-lg btn-pink my-4" type="submit">{% trans 'Confirm' %}</button>
         </form>
