--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -7,7 +7,7 @@
 
 {% block inner_content %}
 
-<div class="container-fluid bg-light-brand account-box p-3 p-md-5 my-3 my-md-5 mx-auto">
+<div class="container-fluid bg-light-brand account-box p-3 p-lg-4 my-3 my-md-5 mx-auto">
   <div class="row">
     <div class="col-12">
       <h1 class="text-pink bold">{% trans "Sign In" %}</h1>
@@ -38,7 +38,7 @@
       {% endif %}
     </div>
   </div>
-  <form class="login col-xl-6" method="POST" action="{% url 'account_login' %}">
+  <form class="login col-12" method="POST" action="{% url 'account_login' %}">
     {% csrf_token %}
     {{ form|crispy }}
     {% if redirect_field_value %}
