--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -6,7 +6,7 @@
 
 {% block inner_content %}
 
-<div class="container-fluid bg-light-brand account-box p-3 p-md-5 my-3 my-md-5 mx-auto">
+<div class="container-fluid bg-light-brand account-box p-3 p-lg-4 my-3 my-md-5 mx-auto">
   <div class="row">
     <div class="col-12">
       <h1 class="text-pink bold">{% trans "Sign Out" %}</h1>
@@ -14,7 +14,7 @@
     </div>
   </div>
 
-  <form method="post" action="{% url 'account_logout' %}">
+  <form method="post" action="{% url 'account_logout' %}" class="col-12">
     {% csrf_token %}
     {% if redirect_field_value %}
     <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
