--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -5,13 +5,13 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
-    <div class="container-fluid bg-light-brand account-box p-3 p-md-5 my-3 my-md-5 mx-auto">
+    <div class="container-fluid bg-light-brand account-box p-3 p-lg-4 my-3 my-md-5 mx-auto">
         <div class="row">
             <div class="col-12">
                 <h1 class="text-pink bold">{% trans "Change Password" %}</h1>
             </div>
         </div>
-        <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
+        <form method="POST" action="{% url 'account_change_password' %}" class="password_change col-12">
             {% csrf_token %}
             {{ form|crispy }}
             <button class="primaryAction btn btn-lg btn-pink my-4" type="submit" name="action">{% trans "Change Password" %}</button>
