--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -6,7 +6,7 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block inner_content %}
-    <div class="container-fluid bg-light-brand account-box p-3 p-md-5 my-3 my-md-5 mx-auto">
+    <div class="container-fluid bg-light-brand account-box p-3 p-lg-4 my-3 my-md-5 mx-auto">
         <div class="row">
             <div class="col-12">
                 <h1 class="text-pink bold">{% trans "Password Reset" %}</h1>
@@ -17,7 +17,7 @@
                 <p>{% trans "Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it." %}</p>                
             </div>
         </div>
-        <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+        <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset col-12">
             {% csrf_token %}
             {{ form|crispy }}
             <input type="submit" class="primaryAction btn btn-lg btn-pink my-4" value="{% trans 'Reset My Password' %}" />
