--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -4,7 +4,7 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
-    <div class="container-fluid bg-light-brand account-box p-3 p-md-5 my-3 my-md-5 mx-auto">
+    <div class="container-fluid bg-light-brand account-box p-3 p-lg-4 my-3 my-md-5 mx-auto">
         <div class="row">
             <div class="col-12">
                 <h1 class="text-pink bold">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
@@ -14,7 +14,7 @@
                     <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}" class="a-pink">new password reset</a>.{% endblocktrans %}</p>
             </div>
             {% else %}
-            <form method="POST" action="{{ action_url }}" class="password_reset_from_key">
+            <form method="POST" action="{{ action_url }}" class="password_reset_from_key col-12">
                 {% csrf_token %}
                 {{ form|crispy }}
                 <input type="submit" name="action" value="{% trans 'change password' %}"/>
