--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -6,14 +6,14 @@
 
 {% block inner_content %}
 
-  <div class="container-fluid bg-light-brand account-box p-3 p-md-5 my-3 my-md-5 mx-auto">
+  <div class="container-fluid bg-light-brand account-box p-3 p-lg-4 my-3 my-md-5 mx-auto">
     <div class="row">
       <div class="col-12">
         <h1 class="text-pink bold">{% trans "Sign Up" %} To Donofy</h1>
         <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}" class="a-pink">sign in</a>.{% endblocktrans %}</p>
       </div>
     </div>
-    <form class="signup col-xl-6" id="signup_form" method="post" action="{% url 'account_signup' %}">
+    <form class="signup col-12" id="signup_form" method="post" action="{% url 'account_signup' %}">
       {% csrf_token %}
       {{ form|crispy }}
       {% if redirect_field_value %}
