--- a/templates/allauth/account/verification_sent.html
+++ b/templates/allauth/account/verification_sent.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Verify Your Email Address" %}{% endblock %}
 
 {% block inner_content %}
-    <div class="container-fluid bg-light-brand account-box p-3 p-md-5 my-3 my-md-5 mx-auto">
+    <div class="container-fluid bg-light-brand account-box p-3 p-lg-4 my-3 my-md-5 mx-auto">
         <div class="row">
             <div class="col-12">
                 <h1 class="text-pink bold">{% trans "Verify Your Email Address" %}</h1>
