--- a/templates/base.html
+++ b/templates/base.html
@@ -128,9 +128,9 @@
 		<footer class="container-fluid m-0 p-0">
 			<div class="row">
 				<div class="col-12 footer-box">
-				<!-- logo svg -->
 				<img class="icon footer-svg" src="{% static 'media/donofy-full-logo-grey.svg' %}" alt="Donofy logo">
 				<p class="text-dark footer-copyright">Copyright Claire Fisher 2024</p>
+				<p class="text-dark footer-copyright">Contact Us: donofy.uk@gmail.com</p>
 				</div>
 			</div>
 		</footer>
