--- a/home/static/home/css/home.css
+++ b/home/static/home/css/home.css
@@ -18,6 +18,12 @@ p {
     font-size: 1.2rem;
 }
 
+.account-info {
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 1.5rem;
+    max-width: 620px;
+}
+
 #hero-text-sm {
     margin-bottom: 3rem;
 }
