add: text-black on footer for improved readability

--- a/templates/base.html
+++ b/templates/base.html
@@ -138,8 +138,8 @@
 			<div class="row">
 				<div class="col-12 footer-box">
 				<img class="icon footer-svg" src="{% static 'media/donofy-full-logo-grey.svg' %}" alt="Donofy logo">
-				<p class="text-dark footer-copyright">Copyright Claire Fisher 2024</p>
-				<a href="{% url 'contact' %}" class="footer-copyright a-dark" aria-label="link to contact us page">Contact Us</a>
+				<p class="text-black footer-copyright">Copyright Claire Fisher 2024</p>
+				<a href="{% url 'contact' %}" class="footer-copyright a-black" aria-label="link to contact us page">Contact Us</a>
 				</div>
 			</div>
 		</footer>
