--- a/static/css/base.css
+++ b/static/css/base.css
@@ -81,12 +81,19 @@ a.a-pink:active,
 a.a-pink:focus,
 a.a-dark:hover,
 a.a-dark:active,
-a.a-dark:focus {
+a.a-dark:focus,
+a.a-black:hover,
+a.a-black:active,
+a.a-black:focus {
     color: #582E8E!important;
 }
 
 .a-dark {
     color:#222;
+}
+
+.a-black {
+    color: #000;
 }
 
 
@@ -157,6 +164,10 @@ a.a-dark:focus {
 
 .text-pink {
     color: #CD2576;
+}
+
+.text-black {
+    color: #000;
 }
 
 .border-pink {
