--- a/static/css/base.css
+++ b/static/css/base.css
@@ -356,8 +356,8 @@ i.icon-lg {
     padding: 4rem 1rem 0 1rem;
 }
 
-.footer-copyright {
-    font-size: 1.2rem;
+.footer-info {
+    font-size: 1.5rem;
     font-weight: 600;
     padding-left: 4.7rem;
     margin-bottom: 0.2rem;
