chore: manual test logs for home page, and edits accoring to findings

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -85,7 +85,7 @@
     <div class="row bg-pink-light justify-content-center pb-4 mx-auto mb-5">
         <!-- find your charities card -->
         <div class="col-12 col-md-4 col-xl-3 text-center">
-            <div class="card stat-card mb-2">
+            <div class="card stat-card mb-2 shadow">
                 <a href="{% url 'charities' %}" aria-label="" class="card-body card-white text-center">
                     <div><i class="card-icon icon-lg icon-pink fa-solid fa-magnifying-glass"></i></div>
                     <h3 class="bold">Find your charities</h3>
@@ -95,7 +95,7 @@
         </div>
         <!-- set a donation amount card -->
         <div class="col-12 col-md-4 col-xl-3 text-center">
-            <div class="card stat-card mb-2">
+            <div class="card stat-card mb-2 shadow">
                 {% if request.user.is_authenticated %}
                 <a href="{% url 'profiles:profile' %}?tab=myDonofy" aria-label="link to profile" class="card-body card-white text-center">
                     <div><i class="card-icon icon-lg icon-pink fa-solid fa-gear"></i></div>
@@ -113,9 +113,9 @@
         </div>
         <!-- make an impact card -->
         <div class="col-12 col-md-4 col-xl-3 text-center">
-            <div class="card stat-card mb-2">
+            <div class="card stat-card mb-2 shadow">
                 {% if request.user.is_authenticated %}
-                <a href="{% url 'profiles:profile' %}?tab=myDonofy" aria-label="link to profile" class="card-body card-white text-center">
+                <a href="{% url 'profiles:profile' %}?tab=myHistory" aria-label="link to profile" class="card-body card-white text-center">
                     <div><i class="card-icon icon-lg icon-pink fa-solid fa-chart-line"></i></div>
                     <h3 id="impact-header" class="bold">Make an impact</h3>
                     <p>Track the impact your financial support has made</p>
@@ -140,7 +140,13 @@
                     <h3 class="text-white bold">Join Donofy today</h3>
                     <p class="text-white">Support the charities and causes you care about, your way.</p>
                     <a href="{% url 'account_signup' %}" aria-label="link to sign up"
-                        class="btn btn-lg btn-white">Sign Up</a>
+                        class="btn btn-lg btn-white mb-3">Sign Up
+                    </a>
+                    <p class="text-white">
+                        Creating an account will allow you to save charities to a favourites list.<br>
+                        With a favourites list, you can make a single donation payment,<br>
+                        and spread it across your favourited charities however you choose.
+                    </p>
                 </div>
             </div>
         </div>
