--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
 				<!-- logo -->
 				<a href="{% url 'home' %}" aria-label="link to home page"
 					class="col-8 col-md-4 my-auto main-logo nav-link" >
-				<img class="main-logo" src="{% static 'media/donofy-full-logo.svg' %}" alt="Donofy logo">
+				<img class="main-logo hover-float" src="{% static 'media/donofy-full-logo.svg' %}" alt="Donofy logo">
 				</a>
 				<!-- dropdown toggle for smaller screens -->
 				<button type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" 
@@ -152,13 +152,13 @@
 			</div>
 			<div class="row">
 				<div class="col-12">
-					<a href="https://github.com/Claire-Fisher/Donofy" class="footer-info"
+					<a href="https://github.com/Claire-Fisher/Donofy" class="footer-info a-black hover"
 						target="_blank" aria-label="Link to site develeper's gitHub (opens in a new tab)">
-						<i class="fa-brands fa-github text-black hover icon-lg mx-2"></i>
+						<i class="fa-brands fa-github icon-lg mx-2"></i>
 					</a>
-					<a href="https://www.linkedin.com/in/claire-fisher-coder/" class="ml-2"
+					<a href="https://www.linkedin.com/in/claire-fisher-coder/" class="ml-2 a-black hover"
 						target="_blank" aria-label="Link to site develeper's Linkedin (opens in a new tab)">
-						<i class="fa-brands fa-linkedin text-black hover icon-lg mx-2"></i>
+						<i class="fa-brands fa-linkedin icon-lg mx-2"></i>
 					</a>
 				</div>
 			</div>
