--- a/templates/base.html
+++ b/templates/base.html
@@ -151,7 +151,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-12">
+				<div class="col-12 mb-5">
 					<a href="https://github.com/Claire-Fisher/Donofy" class="footer-info a-black hover"
 						target="_blank" aria-label="Link to site develeper's gitHub (opens in a new tab)">
 						<i class="fa-brands fa-github icon-lg mx-2"></i>
@@ -165,8 +165,8 @@
 		</footer>
 
 		{% block postloadjs %}
-			<script type="text/javascript">
-			$('.toast').toast('show');
+			<script>
+				$('.toast').toast('show');
 			</script>
 		{% endblock %}
 
