chore: changes hero pngs to webp files

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,8 +10,8 @@
 <div class="container-fluid bg-light-brand pb-5 px-0">
     <div class="row p-0 m-0">
         <!-- hero image -->
-        <img id="hero-img" class="col-12 d-none d-lg-block" src="{% static 'media/hero-img.png' %}" alt="Hero image- people jumping together on a sunset beach">
-        <img id="hero-img-sm" class="col-12 d-block d-lg-none" src="{% static 'media/hero-img-small.png' %}" alt="Hero image- people jumping together on a sunset beach">
+        <img id="hero-img" class="col-12 d-none d-lg-block" src="{% static 'media/hero-img.webp' %}" alt="Hero image- people jumping together on a sunset beach">
+        <img id="hero-img-sm" class="col-12 d-block d-lg-none" src="{% static 'media/hero-img-small.webp' %}" alt="Hero image- people jumping together on a sunset beach">
         <!-- Displays on screens with min-width >= 992px -->
         <div id="hero-text" class="col-12 d-none d-lg-block pl-4 account-info">
             <h1 class="d-none d-lg-block text-white bold pb-3">Spreading affordable support,<br>to your causes, your way.</h1>
