--- a/charities/templates/charities/charities.html
+++ b/charities/templates/charities/charities.html
@@ -58,34 +58,36 @@
         <div class="row mb-5">
             {% for charity in charities %}
             <div class="col-12 px-xs-0 col-md-6 col-xl-4 my-4 text-center">
-                <a href="{% url 'charity_detail' charity.id %}" aria-hidden="true" tabindex="-1">
-                    <div class="card charity-card hover-float shadow bg-light-brand text-center mx-auto">
-                        {% if charity.logo_image %}
+                <div class="card charity-card hover-float shadow bg-light-brand text-center mx-auto">
+                    {% if charity.logo_image %}
+                        <a href="{% url 'charity_detail' charity.id %}" aria-hidden="true" tabindex="-1">
                             <img src="{% static 'media/' %}{{ charity.logo_image }}" alt="{{ charity.charity_name }} logo"
                                 class="card-img-top charity-card-img">
-                        {% else %}
+                        </a>
+                    {% else %}
+                        <a href="{% url 'charity_detail' charity.id %}" aria-hidden="true" tabindex="-1"></a>
                             <img src="{% static 'media/no-img.jpg' %}" alt="{{ charity.charity_name }}"
                                 class="card-img-top charity-card-img">
+                        </a>
+                    {% endif %}
+                    <h3 class="card-text charity-card-title text-dark bold p-2 mt-1">{{ charity.charity_name }}</h3>
+                    <form action="{% url 'add_to_favs' charity.id %}" method="POST" class="charity-card-btn-box">
+                        {% csrf_token %}
+                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                        <a href="{% url 'charity_detail' charity.id %}" aria-label="link to {{ charity.charity_name }} page"
+                            class="btn btn-lg btn-pink-outline charity-card-btn">Info</a>
+                        {% if charity.id not in charity_favs_ids %}
+                            <button type="submit" class="btn btn-lg btn-pink-outline charity-card-btn">
+                                Favourite
+                            </button>
+                        {% else %}
+                            <a href="{% url 'delete_from_favs_on_charities_page' charity.id %}"
+                                class="btn btn-lg btn-pink-unfav charity-card-btn unfavourite" aria-label="Unfavourite {{ charity.charity_name}}">
+                                    Unfavourite
+                            </a>
                         {% endif %}
-                        <h3 class="card-text charity-card-title text-dark bold p-2 mt-1">{{ charity.charity_name }}</h3>
-                        <form action="{% url 'add_to_favs' charity.id %}" method="POST" class="charity-card-btn-box">
-                            {% csrf_token %}
-                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                            <a href="{% url 'charity_detail' charity.id %}" aria-label="link to {{ charity.charity_name }} page"
-                                class="btn btn-lg btn-pink-outline charity-card-btn">Info</a>
-                            {% if charity.id not in charity_favs_ids %}
-                                <button type="submit" class="btn btn-lg btn-pink-outline charity-card-btn">
-                                    Favourite
-                                </button>
-                            {% else %}
-                                <a href="{% url 'delete_from_favs_on_charities_page' charity.id %}"
-                                    class="btn btn-lg btn-pink-unfav charity-card-btn unfavourite" aria-label="Unfavourite {{ charity.charity_name}}">
-                                        Unfavourite
-                                </a>
-                            {% endif %}
-                        </form>
-                    </div>
-                </a>
+                    </form>
+                </div>
             </div>
             {% endfor %}
         </div>
