chore: removed uneeded aria-describedby attr on searchbar

--- a/charities/templates/charities/includes/search-filters.html
+++ b/charities/templates/charities/includes/search-filters.html
@@ -1,7 +1,7 @@
 <form method="GET" action="{% url 'charities' %}">
     <div class="input-group-lg shadow-sm d-flex flex-nowrap my-3">
         <input type="text" class="form-control search-control" name="q"
-            placeholder="Search our charities" aria-label="Search our charities" aria-describedby="basic-addon2">
+            placeholder="Search our charities" aria-label="Search our charities">
         <div class="input-group-append">
             <button class="input-group-text bold btn btn-lg btn-pink" type="submit" aria-label="Submit search button">
                 <i class="fas fa-search"></i>
