--- a/charities/static/charities/css/charities.css
+++ b/charities/static/charities/css/charities.css
@@ -54,13 +54,8 @@
     background-color: #CD2576;
     color:#fff;
     font-weight: 400;
-    letter-spacing: 1.2px;
-}
-
-.unfavourite {
-    font-weight: 600;
-    padding: 0.5rem;
-    letter-spacing: 1;
+    padding: 0.5rem 2px;
+    letter-spacing: 1px;
 }
 
 /* CHARITY DETAILS PAGE */
