chore: adjusts unfavourite buttons styles

--- a/charities/static/charities/css/charities.css
+++ b/charities/static/charities/css/charities.css
@@ -50,7 +50,7 @@
     width: 45%;
 }
 
-.btn-pink-unfav {
+a.btn-pink-unfav {
     background-color: #CD2576;
     color:#fff;
     font-weight: 400;
