--- a/charities/templates/charities/charities.html
+++ b/charities/templates/charities/charities.html
@@ -82,7 +82,7 @@
                             </button>
                         {% else %}
                             <a href="{% url 'delete_from_favs_on_charities_page' charity.id %}"
-                                class="btn btn-lg btn-pink-unfav charity-card-btn" aria-label="Unfavourite {{ charity.charity_name}}">
+                                class="btn btn-lg charity-card-btn btn-pink-unfav" aria-label="Unfavourite {{ charity.charity_name}}">
                                     Unfavourite
                             </a>
                         {% endif %}
