--- a/home/templates/home/contact_us.html
+++ b/home/templates/home/contact_us.html
@@ -13,15 +13,15 @@
                 <fieldset class="rounded px-3 mb-5">
                     <p class="text-dark">If you would like to contact us about Donofy for any reason, please complete the form below.</p>
                     <label for="your-name" class="text-pink">Your Name *</label>
-                    <input type="text" name="name" id="your-name" class="form-control mb-3" placeholder="Name" required/>
+                    <input type="text" name="name" id="your-name" class="form-control mb-3" placeholder="Name" required>
 
                     <label for="your-email" class="text-pink">Your Email *</label>
-                    <input type="email" name="email" id="your-email" class="form-control mb-3" placeholder="Email" required/>
+                    <input type="email" name="email" id="your-email" class="form-control mb-3" placeholder="Email" required>
 
                     <label for="message" class="text-pink">Your message *</label>
                     <textarea rows="6" name="message" id="message" class="form-control mb-3" placeholder="Your message..." required></textarea>
 
-                    <p class="text-dark text-muted">All form fields above are required</p>
+                    <p class="text-dark">All form fields above are required</p>
                     <button type="submit" class="btn btn-lg btn-pink col-12 col-md-6 col-xl-3" aria-label="Send message">Send</button>
                 </fieldset>
             </form>
