--- a/profiles/templates/profiles/includes/my-donofy.html
+++ b/profiles/templates/profiles/includes/my-donofy.html
@@ -30,6 +30,7 @@
             </div>
             {% endfor %}
             <hr>
+            <p class="text-dark">Please save to update your donation total and preferences.</p>
             <button type="submit" class="btn btn-lg btn-pink mt-3 mb-5 col-12 col-md-6">Save</button>
         </ul>
         <input type="hidden" name="redirect_url" value="{{ request.path }}">
