--- a/profiles/templates/profiles/includes/my-details.html
+++ b/profiles/templates/profiles/includes/my-details.html
@@ -1,11 +1,13 @@
 
-<h2 class="your-total bg-white text-pink bold col-12 col-lg-8 mx-auto mb-0 mt-3 mb-5 py-2 px-0 text-center">Review / edit your details here</h2>
+<h2 class="your-total bg-white text-pink bold col-12 col-lg-8 mx-auto mb-0 mt-3 mb-2 py-2  text-center">Review / edit your details here</h2>
+<p class="text-dark col-12 col-lg-8 mx-auto px-1 text-center">Username and email cannot be changed at this time.<br> Please
+    <a href="{% url 'contact' %}" class="a-pink"> Contact Us </a> if you need to change these.
+</p>
 <form action="{% url 'profiles:profile' %}" method="POST" class="profile-forms col-12 col-lg-8 mx-auto mb-5">
     {% csrf_token %}
     <fieldset class="rounded px-3 mb-5">
         {{ user_form.first_name | as_crispy_field }}
         {{ user_form.last_name | as_crispy_field }}
-        {{ user_form.email | as_crispy_field }}
         {{ profile_form.phone_num | as_crispy_field }}
         {{ profile_form.street_address_1 | as_crispy_field }}
         {{ profile_form.street_address_2 | as_crispy_field }}
