--- a/profiles/templates/profiles/includes/my-donofy.html
+++ b/profiles/templates/profiles/includes/my-donofy.html
@@ -41,7 +41,7 @@
     <h3 class="text-pink col-12 col-lg-8 mx-auto mt-4 px-1">
         Looks like you haven't saved any favourites yet.
     </h3>
-    <p class="text-dark col-12 col-lg-8 mx-auto px-1">
+    <p class="text-dark col-12 col-lg-8 mx-auto px-1 pb-5 mb-5">
         You need at least one charity added to your favourites to start donating.<br>
         Find the causes that matter to you here: 
         <a href="{% url 'charities' %}" aria-label="link to charities page" class="a-pink col-12 col-lg-8 mx-auto px-1">
